[package]
name = "day11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[registries.crates-io]
protocol = "sparse"

[dependencies]
regex = "1.7.1"
primal = "0.3.2"
num-integer = "0.1"
num-traits = "0.2"
sort_by_derive = "0.1.10"
